@@ -1,0 +1,4 @@
+{
+  "_id": "tuples",
+  "list": [ "alpha", "bravo", "charly" ]
+}
