@@ -4,6 +4,8 @@
 
 == rufus-doric - 0.1.1    not yet released
 
+- Rufus::Doric::List : one document containing a single list
+
 
 == rufus-doric - 0.1.0    released 2010/03/17
 
